Efmub-Ogy/src/objects/DeltaAirLineForms__c.object
<CustomObject>
    <description>This object will hold all the Email template Name, labels, api mappings, Field validation type.</description>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Type_for_Validation__c</fullName>
        <description>We will store the field type so that we will perform the appropriate validation</description>
        <label>Field Type for Validation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Will store the object information</description>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_API_Name__c</fullName>
        <label>Salesforce API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Phx Case Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Delta_Air_Lines_Customer_Care_Form</fullName>
        <columns>NAME</columns>
        <columns>Form_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type_for_Validation__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_Name__c</field>
            <operation>equals</operation>
            <value>Delta Air Lines Customer Care Form</value>
        </filters>
        <label>Delta Air Lines Customer Care Form</label>
    </listViews>
    <listViews>
        <fullName>Delta_Air_Lines_Delayed_Bag_Fee_Rebate_F</fullName>
        <columns>NAME</columns>
        <columns>Form_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type_for_Validation__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Form_Name__c</field>
            <operation>equals</operation>
            <value>Delta Air Lines Delayed Bag Fee Rebate Form</value>
        </filters>
        <label>Delta Air Lines Delayed Bag Fee Rebate F</label>
    </listViews>
    <listViews>
        <fullName>Delta_Forms_Labels</fullName>
        <columns>NAME</columns>
        <columns>Form_Name__c</columns>
        <columns>Field_Label__c</columns>
        <columns>Salesforce_API_Name__c</columns>
        <columns>Field_Type_for_Validation__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Delta Forms Labels</label>
    </listViews>
    <nameField>
        <displayFormat>PHXE-{00000}</displayFormat>
        <label>Phx_Email template Labels Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phx Case Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>